styles.css
@property --scroll-t {
    syntax: '<number>';
    inherits: true;
    initial-value: 0;
}

:root {
    --black: #20232e;
    --darker-black: #181223;
    --blue: #22485f;
    --green: #2e494c;
    --green-2: #223f42;
    --green-3: #416866;
    --green-4: #24364a;
    --white: #f4f1de;
    --off-white: #eadfc6;

    /*   
        Shoutout to Angel-RS for this amazing tool to generate filter rules!
        https://angel-rs.github.io/css-color-filter-generator/ 
     */
    --white-filter: brightness(0) saturate(100%) invert(95%) sepia(11%) saturate(495%) hue-rotate(355deg) brightness(109%) contrast(91%);
    --off-white-filter: brightness(0) saturate(100%) invert(90%) sepia(28%) saturate(343%) hue-rotate(325deg) brightness(105%) contrast(84%);

    /* --scroll-mod:  calc(0.25 + .75 * var(--scroll-t)); */
    --scroll-mod: 1;
    --s-border-radius: 1rem;
    --m-border-radius: 2rem;
    --l-border-radius: 4rem;
    --xl-border-radius: 8rem;

    --grid-gap-px: 1rem;
    --card-padding-px: 2rem;

    --block-unit: calc((80vh - var(--grid-gap-px) * 3.0) / 8.0);
    
    scroll-behavior: smooth;
    font-feature-settings: 'liga' 1, 'calt' 1; /* Inter font fix for chrome */
}

html {
    font-size: calc(100vh / 1100 * 16);
    animation: anim-scroll-t ease-in-out;
    animation-timeline: scroll();
}

@keyframes anim-scroll-t {
    50% {
        --scroll-t: 0;
    }
    100% { 
        --scroll-t: 1;
    }
}

body {
    background-color: var(--black);
    font-family: Inter, sans-serif;
    color: var(--white);

    animation: background-scroll ease-in-out;
    animation-timeline: scroll();
    overflow-x: hidden;
    margin: 0;
}

@keyframes background-scroll {
    to { 
        background-color: var(--off-white);
        --scroll-t: 1;
    }
}

.scroll-hide {
    animation: scroll-hide ease-in-out;
    animation-timeline: scroll();
}

@keyframes scroll-hide {
    to { 
        opacity: 0;
    }
}

@keyframes scroll-show {
    to { 
        opacity: 1;
    }
}

.card-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    max-height: 100%;
    position: relative;
}

.card {
    position: absolute;
    height: 80vh;
    max-height: 80%;
    width: calc(var(--block-unit) * 14 + var(--grid-gap-px) * 3);
    padding: var(--card-padding-px);
    border-radius: calc(var(--xl-border-radius) + var(--card-padding-px));
}

/* START CARD SECTION */

.start-card {
    background-color: var(--green);
    /* background: linear-gradient(45deg, var(--green-2), var(--green-3)); */
    box-shadow: 5px 5px 24px rgba(11, 32, 103, 0.5);
    z-index: 10;
    transform-origin: center center;
    animation: card-scroll ease-in-out;
    animation-timeline: scroll(y);
    /* animation-delay: 200px; */
    transition: background-color 0.3s ease;
    overflow: clip;
}

@keyframes card-scroll {
    to { 
        padding: 0;
        height: calc(var(--block-unit) * 2.0);
        width: calc(var(--block-unit) * 8 + var(--grid-gap-px) * 1);
        transform: translate(calc(var(--block-unit) * -3.0 - var(--grid-gap-px) * 1), calc(100vh - var(--block-unit) * 3.0 - var(--grid-gap-px) * 1.5));
        box-shadow: 5px 5px 24px rgba(0, 0, 0, 0);
        border-radius: var(--m-border-radius);
        border-top-left-radius: var(--xl-border-radius);
        border-bottom-right-radius: var(--xl-border-radius);
    }
}

.start-card-overlay {
    width: 100%;
    height: 100%;
    border-radius: var(--m-border-radius);
    position: absolute;
    background-color: transparent;
    transition: background-color 0.3s ease;
    opacity: 0;
    animation: scroll-show ease-in-out;
    animation-timeline: scroll(y);
    z-index: -5;
    border-top-left-radius: var(--xl-border-radius);
    border-bottom-right-radius: var(--xl-border-radius);
}

.start-card-link:hover > .start-card-overlay {
    background-color: var(--blue)
}

.start-card-link {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 2rem;
    text-decoration: none;
    color: var(--white);
    pointer-events: none;
    animation: scroll-pointer-events ease-in-out;
    animation-timeline: scroll(y);
    z-index: -5;
}

@keyframes scroll-pointer-events {
    to {
        pointer-events: auto;
    }
}

.start-card-content {
    max-width: 70vw;
    width: 100%;
    height: 50%;
    margin: auto;
    position: relative;
    top: 50%;
    transform: translateY(-50%);


    pointer-events: none;

    animation: card-content-scroll;
    animation-timing-function: ease-in-out;
    animation-timeline: scroll(y);
}

@keyframes card-content-scroll {
    to {
        width: 100%;
        height: 100%;
    }
}

.logo-holder {
    display: inline-block;
    width: 45%;
    height: 100%;
    text-align: center;
    position: relative;

    animation: logo-holder-scroll ease-in-out;
    animation-timeline: scroll(y);
}

@keyframes logo-holder-scroll {
    to {
        width: 30%;
    }
}

.logo-image {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(calc(-50% + 4rem), -50%);
    height: 100%;
    filter: var(--white-filter);
    animation: icon-scroll;
    animation-timing-function: ease-in-out;
    animation-timeline: scroll(y);
}

@keyframes icon-scroll {
    to {
        height: 65%;
        transform: translate(calc(-50% - var(--grid-gap-px)), -50%);
    }
}
/* ... */

